# DataGovernance

./: README-es.md  README.md  pyproject.toml
docs/: Master_data.md  Master_data_es.md  Metadata_model_and_management.md  Metadata_model_and_management_fr.md  data_quality-es.md  data_quality.md
docs/metadata-management/: Metadata_model_and_management.md  RDF_DCAT.md
docs/metadata-management/web-semantic/: DCAT.md  RDF.md
notebooks/: metadata_extraction.ipynb
